--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -4,9 +4,9 @@ h1, h2 {
 
 .container {
   display: grid;
-  grid-template-columns: 300px auto;
-  grid-template-rows: 100px 500px 100px; 
-  grid-gap: 10px 10px;
+  grid-template-columns: 100px auto;
+  grid-template-rows: auto 50px 500px 100px; 
+  grid-gap: 5px 5px;
 }
 
 .item-1 {
@@ -18,16 +18,20 @@ h1, h2 {
 .item-2 {
   background-color: red;
   grid-row: 2;
-  grid-column: 1;
+  grid-column-start: 1;
+  grid-column-end: 3;
 }
 
 .item-3 {
   background-color: green;
+  grid-row: 3;  
+  grid-column-start: 1;
+  grid-column-end: 3;  
 }
 
 .item-4 {
   background-color: yellow;
-  grid-row: 3;
+  grid-row: 4;
   grid-column-start: 1;
   grid-column-end: 3;
 }
